--- a/SnakeFX/.classpath
+++ b/SnakeFX/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_261"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_261"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/berna/git/zaverecny projekt Snake/SnakeFX/db-derby-10.13.1.1-bin/lib/derby.jar"/>
 	<classpathentry kind="lib" path="C:/Users/berna/git/zaverecny projekt Snake/SnakeFX/db-derby-10.13.1.1-bin/lib/derbyclient.jar"/>
